k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dropwizard-gradle
  namespace: dropwizard-gradle
spec:
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
